[REFACTOR] 피드 조회 스트림 연산 .collect에서 .toList로 변경